# RiftandReign

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.codex/environments/: environment.toml
docs/: acceptance_tests.md  data_model.md  dev_workflow.md  generator_pipeline.md  map_spec.md  project_scope.md  repo_index.md
docs/changes/: 0001_initial_scaffold.md  0002_board_foundation.md  0003_scalar_fields.md  0004_land_water_classification.md  0005_first_pass_hydrology.md  0006_first_pass_biomes.md  0007_start_suitability.md  0008_cli_config_and_larger_maps.md  0009_windowed_map_viewer.md  0010_rectangular_world_and_continent_overhaul.md  0011_generator_reset_continents_and_rivers.md  0011_geography_realism_and_river_networks.md
src/rnr_mapgen/: __init__.py  __main__.py  biomes.py  board.py  cli.py  colors.py  fields.py  hex.py  hydrology.py  main.py  noise.py  starts.py  terrain.py  types.py  viewer.py
src/rnr_mapgen/application/: __init__.py  cli.py
src/rnr_mapgen/domain/: __init__.py  hex.py  models.py
src/rnr_mapgen/generation/: __init__.py  board.py  noise.py  pipeline.py
src/rnr_mapgen/rendering/: __init__.py  colors.py  viewer.py
tests/: test_biomes.py  test_board.py  test_cli.py  test_colors.py  test_fields.py  test_hex.py  test_hydrology.py  test_starts.py  test_terrain.py  test_viewer.py
